objects/Event_Organizer__c.object
<CustomObject>
    <description>Record of all Event Organizers</description>
    <fields>
        <fullName>Alternative_Email__c</fullName>
        <description>Alternative Email of the Event Organizer</description>
        <inlineHelpText>ex. email@gmail.com</inlineHelpText>
        <label>Alternative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternative_Phone__c</fullName>
        <description>Alternative Contact Number for the Event Organizer</description>
        <inlineHelpText>ex. 09672688171</inlineHelpText>
        <label>Alternative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Address of the Event Organizer</description>
        <inlineHelpText>ex. email@gmail.com</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location of the Event Organizer</description>
        <inlineHelpText>Select appropriate Location of the Event</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location_Address_Book__c</referenceTo>
        <relationshipLabel>Event Organizers</relationshipLabel>
        <relationshipName>Event_Organizers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Contact Number of the Event Organizer</description>
        <inlineHelpText>ex. 09672688171</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Event Organizer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Organizer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Organizers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>